--- a/css/index.css
+++ b/css/index.css
@@ -117,7 +117,7 @@ header {
 }
 
 footer {
-  background: url(../images/full-width-image.jpg) no-repeat center; 
+  background: url(http://fc08.deviantart.net/fs70/i/2014/124/5/9/sailor_moon_crystal_wallpaper_by_senshiedits-d7h4gq4.jpg) no-repeat center; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
