--- a/css/index.css
+++ b/css/index.css
@@ -99,7 +99,7 @@ header {
 }
 
 .tree {
-  background: url(../images/tree_bark.png) center; 
+  background: url(http://fc08.deviantart.net/fs70/i/2014/124/5/9/sailor_moon_crystal_wallpaper_by_senshiedits-d7h4gq4.jpg) center; 
   padding: 50px 20px 50px 20px;
   margin: 0 auto;
 }
